# quick-runner

./: .gitignore  .meowcode.json  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PRD.md  README.md
.github/workflows/: ci.yml
benches/: baseline-results.md  cache_bench.rs  cli_bench.rs  config_bench.rs  go_bench.rs  optimization-results.md  profiling-report.md  scan_bench.rs  shell_bench.rs  stats_db_bench.rs
benches/common/: mod.rs
config/: default.toml
docs/: PRE_RELEASE_REVIEW.md
docs/historical/: PRD.md
docs/superpowers/plans/: 2026-04-01-performance-benchmarking.md  2026-07-10-frame-budget-performance.md
src/: agent_history.rs  atomic.rs  config.rs  lib.rs  main.rs  picker.rs  pricing.rs  project_profile.rs  scanner.rs  secret.rs  shell.rs  stats_db.rs  terminal.rs
src/ai/: client.rs  providers.rs
src/commands/: alias.rs  config_cmd.rs  do_cmd.rs  doctor.rs  go.rs  learn.rs  mod.rs  run.rs  stats.rs
test-projects/: .gitignore  README.md
test-projects/fizz-buzz/: index.js  package.json
test-projects/palindrome-number/: main.py  pyproject.toml
test-projects/reverse-string/: go.mod  main.go
test-projects/two-sum/src/: main.rs
tests/: cli.rs  fuzz_props.rs  perf_timing.rs
