[package]
name = "quick-runner"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "QuickRunner (qr) is a blazing-fast, AI-augmented developer shell helper."

[[bin]]
name = "qr"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
crossterm = "0.29.0"
dirs = "6.0.0"
fuzzy-matcher = "0.3.7"
indicatif = "0.18.3"
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
shellexpand = "3.1.1"
toml = "0.9.8"
walkdir = "2.5.0"

[dev-dependencies]
assert_cmd = "2.1.1"
criterion = { version = "0.5.1", features = ["html_reports"] }
predicates = "3.1.3"
tempfile = "3.23.0"

[[bench]]
name = "scan_bench"
harness = false

[[bench]]
name = "go_bench"
harness = false

[[bench]]
name = "config_bench"
harness = false

[[bench]]
name = "cache_bench"
harness = false

[[bench]]
name = "stats_db_bench"
harness = false

[[bench]]
name = "shell_bench"
harness = false
