[package]
name = "quick-runner"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
description = "QuickRunner (qr) is a blazing-fast, AI-augmented developer shell helper."
repository = "https://github.com/baanish/quick-runner"
homepage = "https://github.com/baanish/quick-runner"
readme = "README.md"
keywords = ["cli", "developer-tools", "shell", "ai", "rust"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "qr"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
crossterm = "0.29.0"
dirs = "6.0.0"
fuzzy-matcher = "0.3.7"
indicatif = "0.18.3"
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
shellexpand = "3.1.1"
shlex = "2.0.1"
toml = "0.9.8"
walkdir = "2.5.0"

# OS keychain for API-key storage, via per-platform native backends. All are
# pure Rust with no system-library/dev-package requirements, so CI builds clean.
# macOS Keychain and Windows Credential Manager persist normally; the Linux
# kernel-keyutils backend is session-scoped (not retained across reboot) — a
# persistent Secret Service backend can be added later if needed.
[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", default-features = false, features = ["apple-native"] }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3", default-features = false, features = ["linux-native"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3", default-features = false, features = ["windows-native"] }

[dev-dependencies]
assert_cmd = "2.1.1"
criterion = { version = "0.5.1", features = ["html_reports"] }
predicates = "3.1.3"
proptest = "1"
tempfile = "3.23.0"

[[bench]]
name = "scan_bench"
harness = false

[[bench]]
name = "go_bench"
harness = false

[[bench]]
name = "config_bench"
harness = false

[[bench]]
name = "cache_bench"
harness = false

[[bench]]
name = "stats_db_bench"
harness = false

[[bench]]
name = "shell_bench"
harness = false
